Messages overlapping issue Fix

--- a/components/chat/userChat/recievedMessage/recievedMessage.module.css
+++ b/components/chat/userChat/recievedMessage/recievedMessage.module.css
@@ -7,6 +7,7 @@
 .recievedMessageContentContainer {
   min-width: 1rem;
   max-width: 25rem;
+  min-height: 1rem;
   background-color: var(--BGMiddleColor);
   padding: 1rem;
   border-top-right-radius: 1rem;
