--- a/components/chat/userChat/sentMessage/sentMessage.module.css
+++ b/components/chat/userChat/sentMessage/sentMessage.module.css
@@ -7,6 +7,7 @@
 .sentMessageContentContainer {
   min-width: 1rem;
   max-width: 25rem;
+  min-height: 1rem;
   background-color: var(--FGPrimary);
   padding: 1rem;
   border-top-left-radius: 1rem;
